# S.T.O.R.M

./: .gitignore  README.md  docker-compose.yml
STORM_Backend/: CMakeLists.txt  Dockerfile  envoy.yaml
STORM_Backend/proto/: storm.proto
STORM_Backend/src/: kv_store.cpp  kv_store.h  main.cpp  server.cpp  store.cpp  store.h
STORM_Backend/tests/: test_store.cpp
STORM_Frontend/: Dockerfile  package.json
STORM_Frontend/src/: App.css  App.js  Node.css  Node.js  grpcClient.js
